<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/bgapp_background_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etGame"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:hint="@string/dialog_add_game"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:importantForAutofill="no"
            android:inputType="text" />
        <RadioGroup
            android:id="@+id/rgCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbCooperative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/bgapp_cooperative_category"
                android:checked="true"
                android:text="@string/dialog_cooperative_category"
                android:textColor="@color/white" />
            <RadioButton
                android:id="@+id/rbDeckbuilding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/bgapp_cooperative_category"
                android:checked="true"
                android:text="@string/dialog_Deckbuilding_category"
                android:textColor="@color/white" />
            <RadioButton
                android:id="@+id/rbEurogames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/bgapp_euro_category"
                android:checked="true"
                android:text="@string/dialog_eurogames_category"
                android:textColor="@color/white" />
            <RadioButton
                android:id="@+id/rbLCG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/bgapp_cooperative_category"
                android:checked="true"
                android:text="@string/dialog_LCG_category"
                android:textColor="@color/white" />
            <RadioButton
                android:id="@+id/rbLegacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/bgapp_cooperative_category"
                android:checked="true"
                android:text="@string/dialog_cooperative_category"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/btnAddGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_newgame_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/bgapp_accent"/>

        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>